# SimCache

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  compose-generate.sh  docker-compose.yaml  multi_server_test.sh  single_server_test.sh
apps/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/cache/: CMakeLists.txt  cache_manager.cpp  single_cache_manager.cpp
src/include/cache/: cache_manager.h  single_cache_manager.h
src/include/server/: router.h  rpc_stub.h  server.h
src/include/store/: storage_engine.h
src/server/: CMakeLists.txt  router.cpp  rpc_stub.cpp  server.cpp
src/store/: CMakeLists.txt  storage_engine.cpp
test/: CMakeLists.txt
test/server/: rpc_client_test.cpp  rpc_server_test.cpp  server_test.cpp
test/store/: storage_engine_test.cpp
test/test/: server_test.cpp
